--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:background="#373737"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
         <Button
             android:id="@+id/btn_cpu"
@@ -32,8 +32,8 @@
     <TableRow
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
         <Button
             android:id="@+id/btn_ram"
@@ -52,9 +52,9 @@
     <TableRow
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="70dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
+        android:layout_marginBottom="70dp">
 
         <Button
             android:id="@+id/btn_case"
