--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp">
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp">
 
         <Button
             android:id="@+id/btn_cpu"
@@ -25,15 +25,16 @@
             android:id="@+id/btn_gpu"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:text="@string/gpu" />
     </TableRow>
 
     <TableRow
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp">
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp">
 
         <Button
             android:id="@+id/btn_ram"
@@ -45,16 +46,17 @@
             android:id="@+id/btn_mobo"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:text="@string/motherboard" />
     </TableRow>
 
     <TableRow
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp">
-        android:layout_marginBottom="70dp">
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp">
+        android:layout_marginBottom="50dp">
 
         <Button
             android:id="@+id/btn_case"
@@ -66,7 +68,8 @@
             android:id="@+id/btn_power"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:text="@string/power_supply" />
     </TableRow>
 </LinearLayout>
