--- a/app/src/main/res/layout/activity_add_component.xml
+++ b/app/src/main/res/layout/activity_add_component.xml
@@ -21,17 +21,34 @@
         android:layout_height="wrap_content"
         android:hint="Description"
         android:inputType="textMultiLine"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Priority"
-        android:layout_marginTop="8dp"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
 
-    <NumberPicker
-        android:id="@+id/number_picker_priority"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <EditText
+        android:id="@+id/edit_text_manufacturer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Manufacturer"
+        android:inputType="text"/>
+
+    <EditText
+        android:id="@+id/edit_text_link"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Web Link"
+        android:inputType="text"/>
+
+    <EditText
+        android:id="@+id/edit_text_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Price"
+        android:inputType="numberDecimal"/>
+
+    <EditText
+        android:id="@+id/edit_text_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Product Type"
+        android:inputType="text"/>
 
 // *** input types allows for single line only input
 </LinearLayout>
